civo-github/templates/mgmt/components/argocd/argocd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    # cert-manager.io/issuer: cloudflare-origin-issuer
    # cert-manager.io/issuer-kind: OriginIssuer
    # cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec:
  rules:
  - host: argocd.<DOMAIN_NAME>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd.<DOMAIN_NAME>
    secretName: argocd-secret # do not change, this is provided by Argo CD
